--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react_ujs": "^2.4.4"
+    "react-redux": "^5.0.7",
+    "react_ujs": "^2.4.4",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
+    "redux-devtools": "^3.4.1",
     "webpack-dev-server": "^2.11.1"
   }
 }
